[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Gerard Lichtert <gerard.lichtert@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rxpy = "^0.1.0"
thespian = "^3.10.7"
fabric = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
